--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/style/index.css" media="all">
 </head>
 <body>
@@ -15,15 +16,34 @@
             <div>
                 <h2><a href="#">Track</a></h2>
             </div>
-            <img src="./assets/img/profile-picture.jpg" alt="Profile Pic" class="profile-pic">
             <nav>
                 <ul>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#"><span>Login</span></a></li>      
+                    <li><a href="#"><span class="login">Login</span></a></li>      
                 </ul>
             </nav>
         </div>
     </header>
+    <main class="container">
+        <section>
+            <h1>Welcome To <span class="purple">Track</span> !</h1>
+            <p class="track-text">
+                At Track, we understand the importance of timely and reliable deliveries. 
+                Our state-of-the-art tracking system empowers you to stay informed about 
+                the status of your shipments in real-time.
+            </p>
+        </section>
+        
+        <section id="socials" class="socials">
+            <div>
+                <p>You can check out our socials here!</p>
+                <i class="fa-brands fa-tiktok"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+            </section>
+    </main>
+    </main>
 </body>
 </html>
