--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
             </nav>
         </div>
     </header>
+    <div class="map"></div>
+    <button class="location-button">map</button>
 </body>
 </html>
