--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
     </header>
     <main class="container">
         <section>
-            <h1>Welcome To <span class="purple">Track</span> !</h1>
-            <p class="track-text">
-                At Track, we understand the importance of timely and reliable deliveries. 
-                Our state-of-the-art tracking system empowers you to stay informed about 
-                the status of your shipments in real-time.
-            </p>
+            <h1>Welcome To <span class="purple">Track</span></h1>
+            <div class="welcome">
+                <p class="track-text">
+                    At Track, we understand the importance of timely and reliable deliveries. 
+                    Our state-of-the-art tracking system empowers you to stay informed about 
+                    the status of your shipments in real-time.
+                </p>
+                <button class="to-track"><a href="#track">Track Now!</a></button>
+            </div>
         </section>
         
         <section id="socials" class="socials">
@@ -59,12 +62,10 @@
                     Use our advanced tracking system to ensure timely deliveries and keep 
                     your shipments on your radar every step of the way.
                 </p>
-                <button><a href="#">Track</a></button>
+                <div class="map"></div>
+                <button class="location-button"><a href="##">Track</a></button>
             </div>
-            <div class="map"></div>
         </section>
-        <div class="map"></div>
-      <button class="location-button">map</button>
     </main>
 </body>
 </html>
